--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Appska</title>
-</head>
-<body>
-    <h1>Сайт Appska</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="css/style.css" />
+        <title>Appska</title>
+    </head>
+    <body>
+        <header class="header">
+            <div class="container header__container">
+                <div class="logo">
+                    <a href="#" class="logo__link"><img src="./src/icons/appska_logo.svg" alt="appska" class="logo__image" /></a>
+                </div>
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__item"><a href="#" class="menu__link">Services</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">For Publishers</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">Cases</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">Blog</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link button">Contact Us</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <section class="flow">
+            <div class="container flow__container">
+                <h1 class="flow__title">a flow of &nbsp;<span class="text-accent">target</span><br />users <i class="arrow"></i> for your app</h1>
+            </div>
+        </section>
+    </body>
 </html>
+ 
